add pasrely error for payment withdraw amount greater that current amount

--- a/app/views/payments/influencer_index.html.erb
+++ b/app/views/payments/influencer_index.html.erb
@@ -13,7 +13,10 @@
       <div class="amount-withdraw">
         <%= label_tag 'withdraw_amount', 'Amount to Withdraw' %>
         <%= number_field_tag 'withdraw_amount', '',
-                             data: { 'parsley-min' => '1', 'parsley-errors-container' => '#p-error-container-inf-payment' }
+                             data: { 'parsley-min' => '1','parsley-max' => current_user.balance,
+                                     'parsley-errors-container' => '#p-error-container-inf-payment',
+                                     'parsley-max-message' => 'Amount should not be greater than current balance.'
+                                }
         %>
         <div id="p-error-container-inf-payment"></div>
         <%= button_tag 'WITHDRAW', :class => 'btn btn-withdraw', id: 'btn-amount-withdraw' %>
