--- a/app/views/offers/_offer.erb
+++ b/app/views/offers/_offer.erb
@@ -26,7 +26,7 @@
       </a>
     </div>
 
-    <div class="offer-text"><%= offer.name %><i class="fa fa-arrow-down pull-right offer-message-down-arrow"></i></div>
+    <div class="offer-text"><%= offer.name %><i class="fa fa-caret-down pull-right offer-message-down-arrow"></i></div>
 
     <div class="action">
       <% if current_user.influencer? %>
