add pasrely error for payment withdraw amount greater that current amount

--- a/app/views/payments/influencer_index.html.erb
+++ b/app/views/payments/influencer_index.html.erb
@@ -19,7 +19,11 @@
                                 }
         %>
         <div id="p-error-container-inf-payment"></div>
-        <%= button_tag 'WITHDRAW', :class => 'btn btn-withdraw', id: 'btn-amount-withdraw' %>
+        <%= button_tag 'WITHDRAW',
+                       :class => 'btn btn-withdraw',
+                       id: 'js-influencer-amount-withdraw',
+                       data:{ balance: current_user.balance}
+        %>
       </div>
     </div>
 
