change influencer connect button and show modal on help link

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -222,6 +222,7 @@
 
 <%= render partial: 'shared/profile_image_upload', locals: { user: current_user } %>
 <%= render partial: 'shared/profile_image_crop', locals: { user: current_user }%>
+<%= render partial: 'shared/guideline_modal'%>
 <div class="loader"></div>
 
 <!-- generic modal container -->
