--- a/app/views/profile/_add_facebook_account.html.erb
+++ b/app/views/profile/_add_facebook_account.html.erb
@@ -30,14 +30,14 @@
 
                     <br/>
 
-                    <input class="btn btn-primary button-border-blue" type="submit" value="CONNECT"/>
+                    <input class="br-btn-submit" type="submit" value="CONNECT"/>
                 </form>
             </div>
 
             <div class='help-note'>
                     <P>Note:</p>
                     <p>Only the pages that meet out eligibility guidelines are displayed here.</p>
-                    <p>You can view our eligibility guidelines <a href='/helps/index'>here</a>.</p>
+                    <p>You can view our eligibility guidelines <a data-toggle='modal' data-target='#guideline-modal' href='javascript:;'>here</a>.</p>
                 </div>
 
           </div>
