change guide line modal content

--- a/app/views/shared/_guideline_modal.html.erb
+++ b/app/views/shared/_guideline_modal.html.erb
@@ -7,7 +7,7 @@
           <button type="button" class="close" data-dismiss="modal">&times;</button>
         </div>
         <div class="modal-body">
-          <p>This page will implemented in near future.</p>
+          <p>This page will be implemented in near future.</p>
         </div>
       </div>
     </div>
