remove street address from required field

--- a/app/views/profile/profile.html.erb
+++ b/app/views/profile/profile.html.erb
@@ -59,7 +59,7 @@
             <div>
               <%= f.label :street_address, class: 'textarea-label' %>
               <%= f.text_area :street_address, rows: 4, class: 'street-address-textarea',
-                              placeholder: 'Enter your address here', maxlength: 200, 'data-parsley-required' => 'true' %>
+                              placeholder: 'Enter your address here', maxlength: 200 %>
             </div>
             <div>
               <%= f.label :zip_code %>
