align social account and pricing section with add account button with same padding on both side

--- a/app/assets/stylesheets/profile.css
+++ b/app/assets/stylesheets/profile.css
@@ -17,6 +17,7 @@
 @media (min-width: 768px) {
     .brands-profile-page-wrapper {
         padding-right: 5%;
+        padding-left: 5%;
         margin: 25px 20px;
     }
 }
