--- a/app/views/profile/_read_only_profile_modal.html.erb
+++ b/app/views/profile/_read_only_profile_modal.html.erb
@@ -23,8 +23,8 @@
           <div class="display-inline-block pull-right like-send-request">
             <% if  user.influencer? %>
             <div class="follower-box font-raleway">
-              <div class="follower-number"><%= user.max_followers %></div>
-              <p> Likes</p>
+              <div class="follower-number display-inline-block"><%= influencer.max_followers %></div>
+              <div class="view-profile-likes display-inline-block">&nbsp;Likes</div>
             </div>
            <% end %>
           </div>
