Explore: 1. Added string pages after page icon 2. Added string Total likes after Like icon 3. Changed from max followers to total followers in view profile

--- a/app/views/explores/_explores.erb
+++ b/app/views/explores/_explores.erb
@@ -13,9 +13,9 @@
                   <p class="influencer-industry"> <%= influencer.categories.pluck(:name).join(', ') if influencer.categories.present? %></p>
                   <p class="influencer-biography"><%= truncate(influencer.short_bio, length: 100) %> </p>
                   <p>
-                    <%= image_tag('explore-followers.png', :alt => 'number-of-follower') %> &nbsp;<%= influencer.max_followers %>
+                    <%= image_tag('explore-followers.png', :alt => 'number-of-follower') %> Total Likes: &nbsp;<%= influencer.max_followers %>
                   </p>
-                  <p> <%= image_tag('fb-icon.png', :alt => 'number-of-pages') %> &nbsp;<%= influencer.active_facebook_accounts.count %></p>
+                  <p> <%= image_tag('fb-icon.png', :alt => 'number-of-pages') %> Pages: &nbsp;<%= influencer.active_facebook_accounts.count %></p>
                 </div>
                 <%= link_to 'VIEW PROFILE', influencer_path(influencer), remote: true, :class => 'btn btn-primary btn-view-profile' %>
               </div>
