--- a/app/views/campaigns/new_brand_payment.html.erb
+++ b/app/views/campaigns/new_brand_payment.html.erb
@@ -38,9 +38,9 @@
     <strong>End Date :</strong> <%= @campaign.end_date && @campaign.end_date.strftime('%d-%m-%Y') %><br/>
     <strong>Payment :</strong> <%= @campaign.cost %> INR<br/>
 
-    <%= image_tag(@campaign.receiver.profile_picture, :class => 'profile-image', :alt => 'Influencer Picture') %>
+    <%= image_tag(@campaign.receiver.profile_picture, :class => 'payment-influencer-image', :alt => 'Influencer Picture') %><br/>
     <strong>Influencer Name :</strong> <%=@campaign.receiver.full_name %><br/>
-    <strong>Influencer Industry :</strong> <%= @campaign.receiver.industry %><br/>
+    <strong>Influencer Industry :</strong> <%= @campaign.receiver.categories.pluck(:name).join(', ') if @campaign.receiver.categories.present? %><br/>
     <strong>Influencer Location :</strong> <%= @campaign.receiver.location %><br/>
     <br/>
     <strong>Campaign Heading :</strong> <%= @campaign.headline %><br/>
