--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -1566,7 +1566,7 @@ a .offer-box:last-child{
   border-radius: 0;
   color: #ffffff;
   height: 36px;
-  width: 107px;
+  min-width: 107px;
   padding: 9px 10px;
   margin-top: 14px;
   &:hover {
@@ -1591,4 +1591,18 @@ a .offer-box:last-child{
   body {
     background-color: #2b2f3e;
   }
+}
+
+// over-ride bootstrap .btn class
+.btn{
+  border: medium none;
+  border-radius: 0;
+  color: #ffffff;
+  height: 36px;
+  min-width: 107px;
+  padding: 9px 10px;
+}
+
+.btn:hover{
+  color: #ffffff;
 }
