--- a/app/views/campaigns/new.html.erb
+++ b/app/views/campaigns/new.html.erb
@@ -165,8 +165,8 @@
 
       </div>
       <div class="new-campaign-button-set">
-        <%= f.button 'BOOK NOW', class: 'btn btn-book-now' %>
-        <%= link_to 'CANCEL', explores_path, class: 'btn btn-book-now grey-color' %>
+        <%= f.button 'SEND REQUEST', class: 'br-btn-submit btn-book-now' %>
+        <%= link_to 'CANCEL', explores_path, class: 'btn btn-book-now-cancel grey-color' %>
       </div>
   <% end %>
 
