on campaign request page: Change the Book Now button text to ’SEND REQUEST’. color to change to Blue nad issue solve change text to description non mandatory headline is not mandatory

--- a/app/assets/stylesheets/campaigns.css
+++ b/app/assets/stylesheets/campaigns.css
@@ -565,6 +565,12 @@ only screen and (max-width: 560px) {
 }
 
 .campaign-create-wrapper .btn-book-now-cancel{
+    border: medium none;
+    border-radius: 0;
+    color: #ffffff;
+    height: 36px;
+    min-width: 107px;
+    padding: 9px 10px;
     margin-top: -3px;
     margin-left: 10px;
 }
