--- a/app/views/campaigns/new.html.erb
+++ b/app/views/campaigns/new.html.erb
@@ -150,17 +150,17 @@
       <div class="text-headline-form">
 
         <div class="">
-          <%= f.label :text, 'Text' %>
+          <%= f.label :text, 'Description' %>
         </div>
         <div class="">
-          <%= f.text_area :text, rows: 4, 'data-parsley-required' => 'true' %>
+          <%= f.text_area :text, rows: 4 %>
         </div>
 
         <div class="">
           <%= f.label :headline, 'Headline' %>
         </div>
         <div class="">
-          <%= f.text_field :headline, 'data-parsley-required' => 'true' %>
+          <%= f.text_field :headline  %>
         </div>
 
       </div>
