--- a/app/views/campaigns/new_brand_payment.html.erb
+++ b/app/views/campaigns/new_brand_payment.html.erb
@@ -50,7 +50,7 @@
   <form method="post" action="https://test.ccavenue.com/transaction/transaction.do?command=initiateTransaction">
     <input type="hidden" name="encRequest" value="<%= encrypted_data %>" />
     <input type="hidden" name="access_code" value="<%= access_code %>" />
-    <input class="btn btn-book-now" type="submit" name="submit" value="ENGAGE NOW" />
+    <input class="br-btn-submit btn-book-now" type="submit" name="submit" value="ENGAGE NOW" />
   </form>
 
 </div>
