make primary button and inherit this btn for all other button replace setting page save btn

--- a/app/assets/stylesheets/brands_home.scss
+++ b/app/assets/stylesheets/brands_home.scss
@@ -253,14 +253,14 @@ ul.menu-item li {
 .in .navbar-nav, .collapsing .navbar-nav{
   margin: 7.5px -10px
 }
-.btn-submit {
-  background-color: #00c9f3;
-  border: medium none;
-  border-radius: 0;
-  height: 35px;
-  width: 111px;
-  margin-top: 14px;
-}
+//.btn-submit {
+//  background-color: #00c9f3;
+//  border: medium none;
+//  border-radius: 0;
+//  height: 35px;
+//  width: 111px;
+//  margin-top: 14px;
+//}
 
 @media screen and (max-width: 650px) {
   .identity .text-upper {
