--- a/app/views/profile/show_settings.html.erb
+++ b/app/views/profile/show_settings.html.erb
@@ -61,7 +61,7 @@
           </header>
           <%= link_to 'DEACTIVATE', deactivate_account_profile_index_path, method: :post, data: { confirm: 'Are you sure to Deactivate your Account ?' }, class:'btn btn-deactivate button-border-grey' %>
         </div>
-
         </div>
-        <%= f.button 'SAVE', class: 'btn btn-save button-border-yellow' %>
+        
+        <%= f.button 'SAVE', class: 'br-btn-submit br-btn-setting' %>
     <% end %>
