--- a/app/views/shared/_footer_home_page.html.erb
+++ b/app/views/shared/_footer_home_page.html.erb
@@ -38,7 +38,7 @@
 
             <div class="row">
               <div class="col-md-12">
-                <%= submit_tag 'SUBMIT', class: 'btn btn-primary btn-submit raleway-semibold' %>
+                <%= submit_tag 'SUBMIT', class: 'br-btn-submit' %>
               </div>
             </div>
         <% end %>
