change contact us button

--- a/app/views/profile/contact_us.html.erb
+++ b/app/views/profile/contact_us.html.erb
@@ -24,9 +24,7 @@
         </div>
 
         <div class="get-in-touch-submit">
-          <div class="form-group">
-            <%= f.button 'SUBMIT', class: 'btn get-in-touch-submit-button button-border-yellow' %>
-          </div>
+            <%= f.button 'SUBMIT', class: 'br-btn-submit' %>
         </div>
     <% end %>
 
