--- a/app/views/profile/profile.html.erb
+++ b/app/views/profile/profile.html.erb
@@ -134,7 +134,7 @@
           <h4 class="social-account">SOCIAL ACCOUNTS AND PRICING</h4>
 
           <button type="button"
-                  class="btn btn-account button-border-yellow js-add-account"
+                  class="btn-profile-page-add-fb js-add-account"
                   data-trigger="modal" data-target="AddFacebookAccount"
                   href="javascript:"
                   data-dismiss="modal">
@@ -150,7 +150,7 @@
 
 </div>
 
-      <%= f.button 'UPDATE', class: 'btn btn-update button-border-yellow' %>
+      <%= f.button 'UPDATE', class: 'btn-profile-page-update' %>
   <% end %>
 
   <script>
