profile page btn update with br brand button

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -1612,7 +1612,7 @@ a .offer-box:last-child{
   color: #ffffff;
   font-weight: 300;
   padding: 9px 10px;
-  font-family: "Raleway Light",sans-serif;
+  font-family: "Raleway Light","Raleway",sans-serif;
   &:hover {
     background-color: #00b6e2;
   }
