--- a/app/views/campaigns/influencer_campaign.html.erb
+++ b/app/views/campaigns/influencer_campaign.html.erb
@@ -5,7 +5,7 @@
 <div class="payment-div ">
   <div class="payment-button-set pull-right dropdown">
     <%#= link_to 'EXPORT', '#', :class => 'btn btn-export button-border-yellow', id: 'export_campaigns' %>
-    <button class="dropdown-toggle btn btn-export button-border-yellow" data-toggle="dropdown">
+    <button class="dropdown-toggle btn-inf-camp-pdf-down" data-toggle="dropdown">
       EXPORT <span class="caret"></span></button>
       <ul class="dropdown-menu influencer-campaign-dropdown" id="export_campaigns">
         <li data-format="pdf" class="report-generate"><a href="#">to PDF</a></li>
