--- a/app/views/bank_accounts/_add_bank_account.html.erb
+++ b/app/views/bank_accounts/_add_bank_account.html.erb
@@ -132,7 +132,7 @@
 
             <div class="row">
               <div class="col-sm-4 text-align-right">
-                <%= f.button  'SAVE', class: 'btn btn-save-account' %>
+                <%= f.button  'SAVE', class: 'btn-bank-account-save' %>
               </div>
               <div class="col-sm-8">
                 <%= link_to 'CANCEL', '', class: 'btn btn-close', 'data-dismiss' => 'modal', 'aria-hidden' => 'true' %>
