--- a/app/views/influencers/_profile_modal.erb
+++ b/app/views/influencers/_profile_modal.erb
@@ -25,7 +25,7 @@
               <div class="view-profile-likes display-inline-block">&nbsp;Likes</div>
             </div>
             <div class="btn-box btn-send-request">
-              <%= link_to 'Send Request', new_campaign_path(receiver_id: influencer.id, social_account_id: influencer.active_facebook_accounts.first.id), class: 'btn btn-message button-border-yellow btn-send-offer-request font-raleway', data: {href: new_campaign_path(receiver_id: influencer.id)} %>
+              <%= link_to 'Send Request', new_campaign_path(receiver_id: influencer.id, social_account_id: influencer.active_facebook_accounts.first.id), class: 'btn-brand-send-campaign-request', data: {href: new_campaign_path(receiver_id: influencer.id)} %>
             </div>
           </div>
 
