--- a/app/views/payments/brand_index.html.erb
+++ b/app/views/payments/brand_index.html.erb
@@ -4,15 +4,14 @@
 
 <div class="payment-div ">
   <div class="payment-button-set dropdown">
-    <button class="dropdown-toggle btn btn-download" data-toggle="dropdown">
+    <button class="dropdown-toggle btn-brand-payment-down-invoice" data-toggle="dropdown">
       DOWNLOAD INVOICE</button>
     <ul class="dropdown-menu pull-right brand-payment-dropdown" id="export_campaigns">
       <li data-format="pdf" class="report-generate"><a href="#">to PDF</a></li>
       <li data-format="xls" class="report-generate"><a href="#">to Excel</a></li>
       <li data-format="csv" class="report-generate"><a href="#">to CSV</a></li>
     </ul>
-  </div>
-</div>
+  </div> </div>
 
 <div class="brand-payment-content">
   <ul class="nav nav-tabs" id="transaction-tabs">
