--- a/app/views/payments/influencer_index.html.erb
+++ b/app/views/payments/influencer_index.html.erb
@@ -20,7 +20,7 @@
         %>
         <div id="p-error-container-inf-payment"></div>
         <%= button_tag 'WITHDRAW',
-                       :class => 'btn btn-withdraw',
+                       :class => 'btn-inf-payment-withdraw',
                        id: 'js-influencer-amount-withdraw',
                        data:{ balance: current_user.balance}
         %>
@@ -69,7 +69,7 @@
           <%= image_tag('Transactions.png', :class => 'transaction-table') %> &nbsp; Transactions
 
           <div class="dropdown pull-right">
-            <button class="dropdown-toggle btn btn-influencer-download pull-right" data-toggle="dropdown">
+            <button class="dropdown-toggle btn-inf-payment-download pull-right" data-toggle="dropdown">
               DOWNLOAD INVOICE</button>
             <ul class="dropdown-menu influencer-payment-dropdown" id="export_campaigns">
               <li data-format="pdf" class="report-generate"><a href="#">to PDF</a></li>
