change all admin button with blue button

--- a/app/assets/stylesheets/admin.scss
+++ b/app/assets/stylesheets/admin.scss
@@ -34,7 +34,7 @@ table {
 { border: 1px solid #DCDCDC; }
 
 #add-admin-modal .label_l{
-  background: #367FA9 none repeat scroll 0 0;
+//  background: #367FA9 none repeat scroll 0 0;
   min-width: 135px;
 }
 
