--- a/app/views/admin/admins/_add_admin_modal.html.erb
+++ b/app/views/admin/admins/_add_admin_modal.html.erb
@@ -42,7 +42,7 @@
                    name="user[password_confirmation]" autocomplete="off" data-parsley-required="true"
                    data-parsley-trigger="change">
           </div>
-          <button class="btn btn-modal-submit" type="submit">
+          <button class="br-btn-submit" type="submit">
             SUBMIT
           </button>
         </form>
