--- a/app/views/admin/admins/manage_admins.html.erb
+++ b/app/views/admin/admins/manage_admins.html.erb
@@ -2,7 +2,7 @@
 
 <div class="admin-page-wrapper">
   <div class="">
-    <a href="#add-admin-modal" data-toggle='modal' class="btn btn-primary raleway-semibold"><span class="plus-sign"><i class="fa fa-plus"></i></span> Add Admin</a>
+    <a href="#add-admin-modal" data-toggle='modal' class="br-btn-submit"><span class="plus-sign"><i class="fa fa-plus"></i></span> Add Admin</a>
   </div>
   <div class="alert-danger"></div>
   <br/>
