--- a/app/views/admin/admins/profile.html.erb
+++ b/app/views/admin/admins/profile.html.erb
@@ -51,6 +51,6 @@
         </div>
       </div>
       </div>
-      <%= f.button 'UPDATE', class: 'btn btn-update button-border-yellow' %>
+      <%= f.button 'UPDATE', class: 'btn-profile-page-update' %>
   <% end %>
 
