--- a/app/views/admin/invitations/_form.html.erb
+++ b/app/views/admin/invitations/_form.html.erb
@@ -27,7 +27,7 @@
             <%= f.text_field :email, class: 'login_input', data: {:'parsley-trigger' => 'change',
                                                                  :'parsley-required' => 'true'} %>
           </div>
-          <button class="btn btn-modal-submit" type="submit">
+          <button class="br-btn-submit" type="submit">
             SUBMIT
           </button>
         <% end %>
