--- a/app/views/admin/invitations/brand_invitation.html.erb
+++ b/app/views/admin/invitations/brand_invitation.html.erb
@@ -2,7 +2,7 @@
 
 <div class="admin-page-wrapper">
   <div class="">
-    <a href="#brand-invitation-modal" data-toggle='modal' class="btn btn-primary raleway-semibold">
+    <a href="#brand-invitation-modal" data-toggle='modal' class="br-btn-submit">
       <span class="plus-sign"><i class="fa fa-plus"></i></span>
       New Invitation</a>
   </div>
