--- a/app/views/admin/admins/log_in.html.erb
+++ b/app/views/admin/admins/log_in.html.erb
@@ -42,7 +42,7 @@
         <ul id="parsley-id-6194" class="parsley-errors-list"></ul>
       </div>
       <%= hidden_field_tag 'admin', true %>
-      <button class="btn btn-lg btn-modal-submit has-spinner" type="submit">
+      <button class="br-btn-submit" type="submit">
         <span class="spinner"><i class="fa fa-spinner fa-spin"></i></span>
         Log In
       </button>
