--- a/app/views/payments/influencer_index.html.erb
+++ b/app/views/payments/influencer_index.html.erb
@@ -68,8 +68,8 @@
         <div id="payment" class="tab-pane fade in active">
           <%= image_tag('Transactions.png', :class => 'transaction-table') %> &nbsp; Transactions
 
-          <div class="dropdown pull-right">
-            <button class="dropdown-toggle btn-inf-payment-download pull-right" data-toggle="dropdown">
+          <div class="dropdown influencer-withdraw-container">
+            <button class="dropdown-toggle btn-inf-payment-download" data-toggle="dropdown">
               DOWNLOAD INVOICE</button>
             <ul class="dropdown-menu influencer-payment-dropdown" id="export_campaigns">
               <li data-format="pdf" class="report-generate"><a href="#">to PDF</a></li>
