--- a/app/views/profile/_add_facebook_account.html.erb
+++ b/app/views/profile/_add_facebook_account.html.erb
@@ -30,7 +30,7 @@
 
                     <br/>
 
-                    <input class="br-btn-submit" type="submit" value="CONNECT"/>
+                    <input class="btn-inf-fb-connect" type="submit" value="CONNECT"/>
                 </form>
             </div>
 
