--- a/app/assets/stylesheets/payments.css
+++ b/app/assets/stylesheets/payments.css
@@ -569,7 +569,14 @@ only screen and (max-width: 768px) {
 }
 
 .bank_accounts_table td input[type=radio] {
-    vertical-align: sub;
+    vertical-align: middle;
+    margin-bottom: 6px;
+}
+@media screen and (-webkit-min-device-pixel-ratio:0) {
+    .bank_accounts_table td input[type=radio] {
+        vertical-align: middle;
+        margin-bottom: 7px;
+    }
 }
 
 .btn-download:hover, .btn-withdraw:hover, .btn-influencer-download:hover, .btn-save-account:hover, .btn-download:focus, .btn-withdraw:focus, .btn-influencer-download:focus, .btn-save-account:focus {
