--- a/app/assets/stylesheets/brands-explore.css
+++ b/app/assets/stylesheets/brands-explore.css
@@ -46,6 +46,7 @@
     text-overflow: ellipsis;
     white-space: nowrap;
     height: 20px;
+    text-decoration: underline;
 }
 
 .brands-explore-content-wrapper .influencer-address {
